--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ pids/
 *.pid
 *.seed
 *.pid.lock
+*backend/.env
 
 # Optional npm cache directory
 .npm/
@@ -26,7 +27,7 @@ pids/
 .node_repl_history
 
 # Environment variables
-# .env
+.env
 # .env.local
 .env.development.local
 .env.test.local
